--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
      <div class="sport-box mt-10">
           <!--活动提示信息-->
           <!--{if $return}-->
-     	  <div class="d-tips-bg">
+     	  <div class="d-tips-bg none">
      	      <p>本次活动已经结束，敬请期待下次活动！</p>
      	  </div>
           <!--{/if}-->
@@ -93,7 +93,7 @@
                               <div class="img-view panel img-view-1" id="panel1"  data-cardIndex="1">
                                   <div class="img-view-box front" >
                                        <div class="img-view-box-in">
-                                          <a href="javascript:;"><!--{if $ad_res.home_one[0]}--><img src="" alt=""><!--{/if}--></a>
+                                          <a href="javascript:;"><img src="images/7e06ee50c936d93eaf09d75db68_p10_mk10.jpg" alt=""></a>
                                       </div>    
                                   </div>
                                   <div class="img-view-box back ">
@@ -104,7 +104,7 @@
                               <div class="img-view panel img-view-2" id="panel2"  data-cardIndex="2">
                                   <div class="img-view-box front" >
                                        <div class="img-view-box-in">
-                                          <a href="javascript:;"><!--{if $ad_res.home_one[1]}--><img src="" alt=""><!--{/if}--></a>
+                                          <a href="javascript:;"><img src="images/ac989fa845f653ca1f8261a76f7_p10_mk10.jpg" alt=""></a>
                                           <div class="d-icon-rightop"></div>
                                       </div>    
                                   </div>
@@ -119,7 +119,7 @@
                               <div class="img-view panel img-view-3" id="panel1"  data-cardIndex="3">
                                   <div class="img-view-box front" >
                                        <div class="img-view-box-in">
-                                          <a href="javascript:;"><!--{if $ad_res.home_one[2]}--><img src="" alt=""><!--{/if}--></a>
+                                          <a href="javascript:;"><img src="images/a6a29c518b9a33ae4a4dc3f11c4_p10_mk10.jpg" alt=""></a>
                                       </div>    
                                   </div>
                                   <div class="img-view-box back ">
@@ -131,7 +131,7 @@
                               <div class="img-view panel img-view-4" id="panel1"  data-cardIndex="4">
                                   <div class="img-view-box front" >
                                        <div class="img-view-box-in">
-                                          <a href="javascript:;"><!--{if $ad_res.home_one[3]}--><img src="" alt=""><!--{/if}--></a>
+                                          <a href="javascript:;"><img src="images/49497258155bd0acc837691c9c1_p10_mk10.jpg" alt=""></a>
                                       </div>    
                                   </div>
                                   <div class="img-view-box back ">
@@ -170,7 +170,7 @@
       </p>
   </div>
   <script>
-  var adImages = ["images/1.jpg", "images/2.jpg", "images/3.jpg", "images/4.jpg",];
+  var adImages = ["orange/images/1.jpg", "orange/images/2.jpg", "orange/images/3.jpg", "orange/images/4.jpg",];
   
   // We assume the server response is something like this:
   var ajaxResult = [
